[gd_scene load_steps=24 format=3 uid="uid://dsr7534o2u3yr"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_0dxlv"]
[ext_resource type="Texture2D" uid="uid://cmmjou0rdb6k4" path="res://imported/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue_v2.png" id="2_er322"]
[ext_resource type="Script" path="res://area_damage.gd" id="3_gqepo"]
[ext_resource type="Texture2D" uid="uid://7xvncph6ylj1" path="res://icon.svg" id="4_ihjn7"]
[ext_resource type="Texture2D" uid="uid://t7uhpadn1gk5" path="res://imported/rpgiab_icon_pack_v1.3/16x16/arrow_blue_right.png" id="4_lx4ta"]
[ext_resource type="Texture2D" uid="uid://bw5c5py1by1wg" path="res://imported/kenney_particle-pack/PNG (Transparent)/slash_02.png" id="5_lfqt5"]
[ext_resource type="Script" path="res://scripts/move.gd" id="6_qha7y"]
[ext_resource type="Script" path="res://scripts/custom_components/Attack.gd" id="8_16w8m"]
[ext_resource type="Script" path="res://scripts/custom_components/HealthPoints.gd" id="9_jjf2q"]
[ext_resource type="Script" path="res://scripts/custom_components/StateMachine.gd" id="10_p4hso"]
[ext_resource type="Script" path="res://scripts/custom_components/PlayerController.gd" id="11_2hfpj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e282q"]
radius = 9.00001
height = 32.0

[sub_resource type="Animation" id="Animation_fs3dp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_bbw22"]
resource_name = "attack_right"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerController")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"do_damage"
}, {
"args": [],
"method": &"stop_attack"
}]
}

[sub_resource type="Animation" id="Animation_6wfp4"]
resource_name = "attack_right2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerController")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"do_damage"
}, {
"args": [],
"method": &"stop_attack"
}]
}

[sub_resource type="Animation" id="Animation_k6x1v"]
resource_name = "death"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(1, 8), Vector2i(2, 8), Vector2i(3, 8), Vector2i(4, 8), Vector2i(5, 8), Vector2i(0, 9), Vector2i(1, 9), Vector2i(2, 9), Vector2i(2, 9), Vector2i(2, 9), Vector2i(2, 9), Vector2i(3, 9), Vector2i(4, 9), Vector2i(5, 9), Vector2i(1, 10)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"player_die"
}]
}

[sub_resource type="Animation" id="Animation_tg0tm"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_x4dk1"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0cuv"]
_data = {
"RESET": SubResource("Animation_fs3dp"),
"attack1": SubResource("Animation_bbw22"),
"attack2": SubResource("Animation_6wfp4"),
"death": SubResource("Animation_k6x1v"),
"idle": SubResource("Animation_tg0tm"),
"run": SubResource("Animation_x4dk1")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7bjnh"]
radius = 51.0
height = 166.0

[sub_resource type="Theme" id="Theme_3bjk3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_731im"]
bg_color = Color(0, 0, 0, 0.223529)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mqo4"]
bg_color = Color(5.99228e-06, 0.466137, 0.0843921, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="Player" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_0dxlv")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_er322")
offset = Vector2(0, -32)
hframes = 6
vframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
position = Vector2(0, -4)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_e282q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0cuv")
}
autoplay = "idle"

[node name="DamageArea" type="Node2D" parent="."]
position = Vector2(0, -3)
script = ExtResource("3_gqepo")

[node name="Area2D" type="Area2D" parent="DamageArea"]
position = Vector2(47, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea/Area2D"]
position = Vector2(13, 0)
shape = SubResource("CapsuleShape2D_7bjnh")
debug_color = Color(0.819608, 0, 0.25098, 0.0588235)

[node name="SpritePointer" type="Sprite2D" parent="DamageArea/Area2D"]
z_index = 5
z_as_relative = false
texture = ExtResource("4_lx4ta")

[node name="SlashSprite" type="Sprite2D" parent="DamageArea/Area2D"]
visible = false
position = Vector2(-20, 0)
rotation = -1.57079
scale = Vector2(0.315749, 0.315749)
texture = ExtResource("5_lfqt5")

[node name="TargetDestinationPivot" type="Node2D" parent="."]
position = Vector2(0, -9)
script = ExtResource("6_qha7y")

[node name="TargetDestination" type="Node2D" parent="TargetDestinationPivot"]
position = Vector2(80, -2)

[node name="Sprite2D" type="Sprite2D" parent="TargetDestinationPivot/TargetDestination"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_ihjn7")

[node name="TargetAttackPivot" type="Node2D" parent="."]
position = Vector2(0, -6)

[node name="TargetAttack" type="Node2D" parent="TargetAttackPivot"]
position = Vector2(87, 0)

[node name="Attack" type="Node" parent="."]
script = ExtResource("8_16w8m")

[node name="HealthPoints" type="Control" parent="." node_paths=PackedStringArray("HEALTH_BAR")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_jjf2q")
HEALTH_BAR = NodePath("HealthBar")

[node name="HealthBar" type="ProgressBar" parent="HealthPoints"]
layout_mode = 0
offset_left = -32.0
offset_top = 9.0
offset_right = 32.0
offset_bottom = 17.0
theme = SubResource("Theme_3bjk3")
theme_override_styles/background = SubResource("StyleBoxFlat_731im")
theme_override_styles/fill = SubResource("StyleBoxFlat_1mqo4")
value = 100.0
show_percentage = false

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("10_p4hso")

[node name="State" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -108.0
offset_right = 20.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerController" type="Node2D" parent="."]
script = ExtResource("11_2hfpj")

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="PlayerController" method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="died" from="HealthPoints" to="." method="_on_health_points_died"]
